--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   nginx:
     build:
-        context: .
-        dockerfile: ./requirements/nginx/Dockerfile
+      context: .
+      dockerfile: ./requirements/nginx/Dockerfile
     container_name: nginx
     ports:
       - "443:443"
@@ -16,6 +16,18 @@ services:
       always
     networks:
      - my-net
+  
+  mariadb:
+    build:
+      context: .
+      dockerfile: ./requirements/mariadb/Dockerfile
+    container_name: mariadb
+    ports:
+      - "3306:3306"
+    restart:
+      always
+    networks:
+      - my-net
 
 networks:
   my-net:
