--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.17
-RUN apk update && apk add --no-cache mariadb mariadb-client mariadb-server-utils
+RUN apk update && apk upgrade && apk add --no-cache mariadb mariadb-client mariadb-server-utils
 RUN mkdir /var/run/mysqld; chmod 777 /var/run/mysqld; \
 		mkdir -p /var/lib/mysql; chown -R mysql:mysql /var/lib/mysql; \
 		mysql_install_db --user=mysql --datadir=/var/lib/mysql
