--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -26,7 +26,8 @@ services:
     env_file: .env
     environment:
       - MYSQL_DATABASE=wordpress
-    command: '--default-authentification-pluging=mysql_native_password'
+      - MYSQL_USER=$MYSQL_USER
+      - MYSQL_PASSWORD=$MYSQL_PASSWORD
     ports:
       - "3306:3306"
     restart: always
