--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,8 +3,10 @@ RUN apk update && apk upgrade && apk add --no-cache mariadb mariadb-client maria
 RUN mkdir /var/run/mysqld; chmod 777 /var/run/mysqld; \
 		mkdir -p /var/lib/mysql; chown -R mysql:mysql /var/lib/mysql; \
 		mysql_install_db --user=mysql --datadir=/var/lib/mysql
-#ENV MYSQL_ROOT_PASSWORD 123
-#ENV MYSQL_DATABASE 123db
 COPY ./requirements/mariadb/my.cnf /etc/mysql/my.cnf
+#COPY ./requirements/mariadb/conf/create_db.sql /docker-entrypoint-initdb.d
 EXPOSE 3306
+#COPY requirements/mariadb/create_db.sh .
+#RUN sh create_db.sh
+#USER mysql
 CMD ["mysqld", "--user=mysql", "--console"]
