--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,4 @@
-MYSQL_ROOT_PASSWORD=test
-MYSQL_USER=abuzdin
-MYSQL_PASSWORD=test
+DB_NANE=wordpress
+DB_USER=abuzdin
+DB_PASS=test
+DB_HOST=mariadb
