--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,17 +1,17 @@
 server {
 	listen 443 ssl;
 	listen [::]:443;
-	server_name localhost;
-	root /var/www;
+	server_name abuzdin.42.fr www.abuzdin.42.fr;
+	root /var/www/;
 	index index.php index.html;
 	ssl_certificate /etc/nginx/ssl/nginx.crt;
 	ssl_certificate_key /etc/nginx/ssl/nginx.key;
-	ssl_protocols TLSv1.3;
+	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_session_timeout 10m;
 	keepalive_timeout 70;
 
 	location / {
-		try_files $uri /index.php?$args /index.html;
+		try_files $uri /index.php?$args;
 		add_header Last-Modified $date_gmt;
 		add_header Cache-Control 'no-store, no-cache';
 		if_modified_since off;
@@ -28,20 +28,4 @@ server {
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 fastcgi_param PATH_INFO $fastcgi_path_info;
         }
-
-        location ~ /\.ht {
-                deny all;
-        }
-        
-        location = /favicon.ico { 
-                log_not_found off; access_log off; 
-        }
-        location = /robots.txt { 
-                log_not_found off; access_log off; allow all; 
-        }
-        location ~* \.(css|gif|ico|jpeg|jpg|js|png)$ {
-                expires max;
-                log_not_found off;
-        }
-
 }
