--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,20 +1,32 @@
 FROM alpine:3.17
-RUN apk update && apk upgrade && apk add --no-cache php \
-	php-fpm \
-	php-json \
-	php-mysqli \
-	php-curl \
-	php-dom \
-	php-exif \
-	php-fileinfo \
-	php-mbstring \
-	php-openssl \
-	php-xml \
-	php-zip \
-	php-opcache \
+RUN apk update && apk upgrade && apk add --no-cache php81 \
+	php81-fpm \
+	php81-json \
+	php81-mysqli \
+	php81-curl \
+	php81-dom \
+	php81-exif \
+	php81-fileinfo \
+	php81-mbstring \
+	php81-openssl \
+	php81-xml \
+	php81-zip \
+	php81-opcache \
 	wget
+    	#sed -i "s|listen = 127.0.0.1:9000|listen = 9000|g" \
+      	#/etc/php81/php-fpm.d/www.conf && \
+    	#sed -i "s|;listen.owner = nobody|listen.owner = nobody|g" \
+      	#/etc/php81/php-fpm.d/www.conf && \
+    	#sed -i "s|;listen.group = nobody|listen.group = nobody|g" \
+      	#/etc/php81/php-fpm.d/www.conf && \
+    	#rm -f /var/cache/apk/*
 WORKDIR /var/www
-RUN wget http://wordpress.org/latest.tar.gz; \
-	tar -xzvf latest.tar.gz; \
-	rm latest.tar.gz
+RUN wget https://wordpress.org/latest.tar.gz; \
+    tar -xzvf latest.tar.gz; \
+    cp -rf wordpress/* . && \
+    rm -rf wordpress latest.tar.gz
+COPY ./requirements/wordpress/conf/www.conf /etc/php81/php-fpm.d/www.conf
+COPY ./requirements/wordpress/wp-config-create.sh .
+RUN sh wp-config-create.sh && rm wp-config-create.sh && \
+    chmod -R 777 wp-content/
 CMD ["/usr/sbin/php-fpm81", "-F"]
