--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -14,7 +14,6 @@ services:
      - my-net
     volumes:
       - ./requirements/nginx/conf/nginx.conf:/etc/nginx/http.d/nginx.conf
-      - ./requirements/nginx/tools/ssl:/etc/nginx/ssl
       - wp-volume:/var/www/
     restart: always
   
@@ -22,8 +21,11 @@ services:
     build:
       context: .
       dockerfile: ./requirements/mariadb/Dockerfile
+      args:
+        DB_NAME: ${DB_NAME}
+        DB_USER: ${DB_USER}
+        DB_PASS: ${DB_PASS}
     container_name: mariadb
-    env_file: .env
     ports:
       - "3306:3306"
     networks:
@@ -36,10 +38,14 @@ services:
     build:
       context: .
       dockerfile: ./requirements/wordpress/Dockerfile
+      args:
+        DB_NAME: ${DB_NAME}
+        DB_HOST: ${DB_HOST}
+        DB_USER: ${DB_USER}
+        DB_PASS: ${DB_PASS}
     container_name: wordpress
     depends_on:
       - mariadb
-    env_file: .env
     networks:
       - my-net
     volumes:
