--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,4 +1,5 @@
 FROM alpine:3.17
+ARG DB_NAME DB_HOST DB_USER DB_PASS
 RUN apk update && apk upgrade && apk add --no-cache php81 \
 	php81-fpm \
 	php81-json \
@@ -13,13 +14,6 @@ RUN apk update && apk upgrade && apk add --no-cache php81 \
 	php81-zip \
 	php81-opcache \
 	wget
-    	#sed -i "s|listen = 127.0.0.1:9000|listen = 9000|g" \
-      	#/etc/php81/php-fpm.d/www.conf && \
-    	#sed -i "s|;listen.owner = nobody|listen.owner = nobody|g" \
-      	#/etc/php81/php-fpm.d/www.conf && \
-    	#sed -i "s|;listen.group = nobody|listen.group = nobody|g" \
-      	#/etc/php81/php-fpm.d/www.conf && \
-    	#rm -f /var/cache/apk/*
 WORKDIR /var/www
 RUN wget https://wordpress.org/latest.tar.gz; \
     tar -xzvf latest.tar.gz; \
